feat: implement customer billing record management service and associated DTOs