@@ -6,9 +6,9 @@ import java.util.ArrayList;
 import java.util.List;
 
 import org.apache.poi.ss.usermodel.*;
-import org.apache.poi.ss.usermodel.Row;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
+import com.github.pjfanning.xlsx.StreamingReader;
 
 import jakarta.persistence.EntityNotFoundException;
 import vn.viettel.khdn.billing_platform.model.BillingPeriod;
@@ -82,7 +82,7 @@ public class ImportService {
             sampleRow.createCell(9).setCellValue("quanly01");
             sampleRow.createCell(10).setCellValue("05/2026");
             sampleRow.createCell(11).setCellValue("Internet");
-            sampleRow.createCell(12).setCellValue("");
+            sampleRow.createCell(12).setCellValue("Mừng ngày Giải Phóng giảm giá 20%");
 
             workbook.write(out);
             return out.toByteArray();
@@ -155,62 +155,58 @@ public class ImportService {
      * Cột K (10): Kỳ Thanh Toán    — định dạng MM/YYYY, VD: 05/2026 (*)
      * Cột L (11): Loại Dịch Vụ     — serviceType (*)
      * Cột M (12): Nội Dung QC      — adsContent
-     *
-     * Trạng thái sau import: CHUA_THU, collectedAmount = 0
      */
     public ImportResultDTO importStartOfPeriod(MultipartFile file, User createdBy) {
         List<ImportResultDTO.ImportErrorRow> errors = new ArrayList<>();
         int successCount = 0;
         BigDecimal totalAmount = BigDecimal.ZERO;
+        
+        List<CustomerBillingRecord> batchRecords = new ArrayList<>();
+        int BATCH_SIZE = 500;
 
-        try (Workbook workbook = WorkbookFactory.create(file.getInputStream())) {
+        try (Workbook workbook = StreamingReader.builder().rowCacheSize(100).bufferSize(4096).open(file.getInputStream())) {
             Sheet sheet = workbook.getSheetAt(0);
-            int lastRow = sheet.getLastRowNum();
-
-            for (int i = 1; i <= lastRow; i++) { // Bỏ header row 0
-                Row row = sheet.getRow(i);
-                if (row == null || isRowEmpty(row)) continue;
+            
+            for (Row row : sheet) {
+                if (row.getRowNum() == 0) continue; // Bỏ header
+                if (isRowEmpty(row)) continue;
+                
+                int currentRowNum = row.getRowNum() + 1; // 1-indexed for logging
 
                 try {
-                    // Col 0: STT — bỏ qua
-                    String customerCode    = getCellString(row, 1);   // Mã KH
-                    String customerName    = getCellString(row, 2);   // Tên KH
-                    String subscriberNum   = getCellString(row, 3);   // Số TB
-                    String phoneNumber     = getCellString(row, 4);   // SĐT
-                    String fullAddress     = getCellString(row, 5);   // Địa chỉ
-                    BigDecimal amount      = getCellBigDecimal(row, 6); // Tổng cước
-                    // Col 7: Hình thức TT — bỏ qua
-                    String consultantUsername = getCellString(row, 8);   // Username nhân viên
-                    // Col 9: Username quản lý — bỏ qua
-                    String billingPeriodRaw = getCellString(row, 10); // Kỳ TT: MM/YYYY
-                    String serviceType      = getCellString(row, 11); // Loại dịch vụ
-                    // Col 12: Nội dung QC — bỏ qua
+                    String customerCode    = getCellString(row, 1);
+                    String customerName    = getCellString(row, 2);
+                    String subscriberNum   = getCellString(row, 3);
+                    String phoneNumber     = getCellString(row, 4);
+                    String fullAddress     = getCellString(row, 5);
+                    BigDecimal amount      = getCellBigDecimal(row, 6);
+                    String consultantUsername = getCellString(row, 8);
+                    String billingPeriodRaw = getCellString(row, 10);
+                    String serviceType      = getCellString(row, 11);
+                    String adsContent       = getCellString(row, 12);
 
-                    // Validate bắt buộc
                     if (customerCode.isBlank() || subscriberNum.isBlank()) {
-                        errors.add(new ImportResultDTO.ImportErrorRow(i + 1,
+                        errors.add(new ImportResultDTO.ImportErrorRow(currentRowNum,
                             "Mã KH (cột B) và Số TB (cột D) không được để trống"));
                         continue;
                     }
                     if (billingPeriodRaw.isBlank()) {
-                        errors.add(new ImportResultDTO.ImportErrorRow(i + 1,
+                        errors.add(new ImportResultDTO.ImportErrorRow(currentRowNum,
                             "Kỳ Thanh Toán (cột K) không được để trống, định dạng MM/YYYY"));
                         continue;
                     }
 
-                    // Parse kỳ thanh toán "MM/YYYY"
                     int month, year;
                     try {
                         String[] parts = billingPeriodRaw.split("/");
                         month = Integer.parseInt(parts[0].trim());
                         year  = Integer.parseInt(parts[1].trim());
                     } catch (Exception e) {
-                        errors.add(new ImportResultDTO.ImportErrorRow(i + 1,
+                        errors.add(new ImportResultDTO.ImportErrorRow(currentRowNum,
                             "Kỳ Thanh Toán '" + billingPeriodRaw + "' sai định dạng, yêu cầu MM/YYYY (VD: 05/2026)"));
                         continue;
                     }
 
-                    // Tìm hoặc tạo BillingPeriod
                     BillingPeriod period = billingPeriodRepository
                         .findByMonthAndYear(month, year)
                         .orElseGet(() -> {
@@ -221,19 +217,16 @@ public class ImportService {
                             return billingPeriodRepository.save(bp);
                         });
 
-                    // Tìm tư vấn viên theo username
                     User consultant = null;
                     if (!consultantUsername.isBlank()) {
                         consultant = userRepository.findByUsername(consultantUsername).orElse(null);
                         if (consultant == null) {
-                            errors.add(new ImportResultDTO.ImportErrorRow(i + 1,
-                                "Không tìm thấy nhân viên với username: " + consultantUsername
-                                + ". Hãy kiểm tra lại mã nhân viên (username) trong cột I."));
+                            errors.add(new ImportResultDTO.ImportErrorRow(currentRowNum,
+                                "Không tìm thấy nhân viên với username: " + consultantUsername));
                             continue;
                         }
                     }
 
-                    // Tạo record mới
                     CustomerBillingRecord record = new CustomerBillingRecord();
                     record.setBillingPeriod(period);
                     record.setCustomerCode(customerCode);
@@ -243,20 +236,31 @@ public class ImportService {
                     record.setFullAddress(fullAddress);
                     record.setAmountDue(amount != null ? amount : BigDecimal.ZERO);
                     record.setServiceType(serviceType.isBlank() ? null : serviceType);
+                    record.setAdsContent(adsContent.isBlank() ? null : adsContent);
                     record.setAssignedConsultant(consultant);
                     record.setCollectionStatus(CollectionStatusEnum.CHUA_THU);
                     record.setDebtStatus(DebtStatusEnum.CHUA_GACH_NO);
                     record.setSyncWarning(SyncWarningEnum.NONE);
-                    recordRepository.save(record);
-
+                    
+                    batchRecords.add(record);
                     totalAmount = totalAmount.add(amount != null ? amount : BigDecimal.ZERO);
                     successCount++;
+                    
+                    if (batchRecords.size() >= BATCH_SIZE) {
+                        recordRepository.saveAll(batchRecords);
+                        batchRecords.clear();
+                    }
 
                 } catch (Exception e) {
-                    errors.add(new ImportResultDTO.ImportErrorRow(i + 1,
+                    errors.add(new ImportResultDTO.ImportErrorRow(currentRowNum,
                         "Lỗi xử lý dòng: " + e.getMessage()));
                 }
             }
+            
+            if (!batchRecords.isEmpty()) {
+                recordRepository.saveAll(batchRecords);
+            }
+            
         } catch (Exception e) {
             throw new IllegalArgumentException("Không thể đọc file Excel: " + e.getMessage());
         }
@@ -274,126 +278,103 @@ public class ImportService {
     // =========================================================================
     // LUỒNG 2: IMPORT ĐỐI CHIẾU GẠCH NỢ — Báo cáo xuất từ hệ thống Viettel
     // =========================================================================
-    /**
-     * Cấu trúc file báo cáo từ Viettel (Book2.xlsx):
-     *
-     * Dòng 1-6: Tiêu đề báo cáo (bỏ qua — tìm động đến khi gặp cột "STT")
-     * Dòng 7:   Header: STT | Chi nhánh | Ban cước | Tổ thu | Số HĐ | Số TB | Tiền trả | Số lũy kế | Còn nợ | HT thu | HT TT | Item no | Mã HĐ
-     * Dòng 8+:  Dữ liệu
-     *
-     * Key đối chiếu:
-     *   Cột F (5): Số TB — subscriberNumber → tìm record trong hệ thống
-     *
-     * Xác định "đã gạch nợ trên Viettel":
-     *   Cột J (9): HT thu — chứa "Gach no" hoặc "Gạch nợ" → fileIsMarked = true
-     *
-     * Ma trận đối chiếu (4 trường hợp):
-     * ┌──────────────┬──────────────────┬─────────────────────────────────────────────────────┐
-     * │ Trạng thái HT│ File Viettel     │ Kết quả                                             │
-     * ├──────────────┼──────────────────┼─────────────────────────────────────────────────────┤
-     * │ DA_GACH_NO   │ Đã gạch nợ       │ ✅ OK — bỏ qua                                      │
-     * │ DA_THANH_TOAN │ Đã gạch nợ       │ ✅ Auto cập nhật → DA_GACH_NO (file Viettel là chuẩn)│
-     * │ CHUA_THU     │ Đã gạch nợ       │ ✅ Auto cập nhật → DA_GACH_NO (gạch mà chưa thu)    │
-     * │ DA_GACH_NO   │ Chưa gạch nợ     │ ⚠️ INCONSISTENT — HT ghi gạch nhưng Viettel chưa   │
-     * │ DA_THANH_TOAN │ Chưa gạch nợ     │ ⚠️ COLLECTED_NOT_MARKED — đã thu chưa gạch Viettel  │
-     * │ CHUA_THU     │ Chưa gạch nợ     │ — Bỏ qua                                            │
-     * └──────────────┴──────────────────┴─────────────────────────────────────────────────────┘
-     */
     public ImportResultDTO importReconciliation(MultipartFile file, Long periodId) {
         List<ImportResultDTO.ImportErrorRow> errors = new ArrayList<>();
         int autoUpdatedCount = 0;
         int validCount       = 0;
         int warningCount     = 0;
+        
+        List<CustomerBillingRecord> batchRecords = new ArrayList<>();
+        int BATCH_SIZE = 500;
 
-        // Validate kỳ tồn tại
         billingPeriodRepository.findById(periodId)
             .orElseThrow(() -> new EntityNotFoundException("Không tìm thấy kỳ thanh toán ID: " + periodId));
 
-        try (Workbook workbook = WorkbookFactory.create(file.getInputStream())) {
+        try (Workbook workbook = StreamingReader.builder().rowCacheSize(100).bufferSize(4096).open(file.getInputStream())) {
             Sheet sheet = workbook.getSheetAt(0);
-            int lastRow = sheet.getLastRowNum();
+            
+            boolean foundHeader = false;
 
-            // Tìm động dòng header thực sự (dòng có cột đầu = "STT")
-            int dataStartRow = findDataStartRow(sheet, lastRow);
-            if (dataStartRow < 0) {
-                throw new IllegalArgumentException(
-                    "Không tìm thấy dòng header trong file. "
-                    + "File phải có dòng tiêu đề cột với ô đầu là 'STT'.");
-            }
-
-            for (int i = dataStartRow; i <= lastRow; i++) {
-                Row row = sheet.getRow(i);
+            for (Row row : sheet) {
                 if (row == null || isRowEmpty(row)) continue;
+                
+                if (!foundHeader) {
+                    String firstCell = getCellString(row, 0).trim().toUpperCase();
+                    if (firstCell.equals("STT")) {
+                        foundHeader = true;
+                    }
+                    continue;
+                }
+                
+                int currentRowNum = row.getRowNum() + 1;
 
                 try {
-                    // Cột F (index 5): Số TB — key đối chiếu chính
                     String subscriberNum = getCellString(row, 5);
-                    // Cột J (index 9): HT thu — xác định đã gạch nợ hay chưa
                     String htThu         = getCellString(row, 9).toLowerCase().trim();
 
-                    if (subscriberNum.isBlank()) continue; // Bỏ qua dòng không có số TB
+                    if (subscriberNum.isBlank()) continue; 
 
-                    boolean fileIsMarked = htThu.contains("gach no")
-                                       || htThu.contains("gạch nợ");
+                    boolean fileIsMarked = htThu.contains("gach no") || htThu.contains("gạch nợ");
 
-                    // Tìm record trong hệ thống theo Số TB + kỳ
                     CustomerBillingRecord record = recordRepository
                         .findBySubscriberNumberAndBillingPeriodId(subscriberNum, periodId)
                         .orElse(null);
 
                     if (record == null) {
-                        errors.add(new ImportResultDTO.ImportErrorRow(i + 1,
-                            "Không tìm thấy KH có Số TB '" + subscriberNum
-                            + "' trong kỳ ID=" + periodId
-                            + ". KH có thể chưa được import đầu kỳ."));
+                        errors.add(new ImportResultDTO.ImportErrorRow(currentRowNum,
+                            "Không tìm thấy KH có Số TB '" + subscriberNum + "' trong kỳ."));
                         continue;
                     }
+                    
+                    boolean updated = false;
 
                     if (fileIsMarked) {
                         if (record.getDebtStatus() == DebtStatusEnum.DA_GACH_NO) {
-                            // debtStatus = DA_GACH_NO + Viettel đã gạch → OK
                             validCount++;
-
                         } else {
-                            // debtStatus = CHUA_GACH_NO + Viettel đã gạch → Auto set debtStatus=DA_GACH_NO
-                            // Áp dụng cho cả DA_THANH_TOAN và CHUA_THU (KH tự trả qua app/thẻ)
                             record.setDebtStatus(DebtStatusEnum.DA_GACH_NO);
                             record.setDebtMarkedAt(Instant.now());
                             record.setSyncWarning(SyncWarningEnum.NONE);
                             record.setSyncWarningNote(null);
-                            recordRepository.save(record);
+                            updated = true;
                             autoUpdatedCount++;
                         }
-
                     } else {
-                        // File CHƯA gạch nợ
                         if (record.getDebtStatus() == DebtStatusEnum.DA_GACH_NO) {
-                            // HT gạch nợ nhưng Viettel chưa → INCONSISTENT
                             record.setSyncWarning(SyncWarningEnum.INCONSISTENT);
-                            record.setSyncWarningNote(
-                                "Hệ thống ghi 'Đã gạch nợ' nhưng báo cáo Viettel chưa ghi nhận. "
-                                + "Số TB: " + subscriberNum + ". Cần kiểm tra lại trên hệ thống Viettel.");
-                            recordRepository.save(record);
+                            record.setSyncWarningNote("Hệ thống ghi 'Đã gạch nợ' nhưng báo cáo Viettel chưa ghi nhận.");
+                            updated = true;
                             warningCount++;
-
                         } else if (record.getCollectionStatus() == CollectionStatusEnum.DA_THANH_TOAN) {
-                            // Đã thu tiền nhưng chưa gạch trên Viettel → COLLECTED_NOT_MARKED
                             record.setSyncWarning(SyncWarningEnum.COLLECTED_NOT_MARKED);
-                            record.setSyncWarningNote(
-                                "Đã thu tiền và in bill nhưng chưa gạch nợ trên hệ thống Viettel. "
-                                + "Số TB: " + subscriberNum + ". Nhân viên cần vào Viettel để gạch nợ.");
-                            recordRepository.save(record);
+                            record.setSyncWarningNote("Đã thu tiền và in bill nhưng chưa gạch nợ trên hệ thống Viettel.");
+                            updated = true;
                             warningCount++;
-
                         }
-                        // CHUA_THU + CHUA_GACH_NO + file chưa gạch → bỏ qua (bình thường)
+                    }
+                    
+                    if (updated) {
+                        batchRecords.add(record);
+                        if (batchRecords.size() >= BATCH_SIZE) {
+                            recordRepository.saveAll(batchRecords);
+                            batchRecords.clear();
+                        }
                     }
 
                 } catch (Exception e) {
-                    errors.add(new ImportResultDTO.ImportErrorRow(i + 1,
+                    errors.add(new ImportResultDTO.ImportErrorRow(currentRowNum,
                         "Lỗi xử lý dòng: " + e.getMessage()));
                 }
             }
+            
+            if (!batchRecords.isEmpty()) {
+                recordRepository.saveAll(batchRecords);
+            }
+            
+            if (!foundHeader) {
+                throw new IllegalArgumentException("Không tìm thấy dòng header có cột 'STT'.");
+            }
+            
         } catch (IllegalArgumentException e) {
             throw e;
         } catch (Exception e) {
@@ -409,32 +390,14 @@ public class ImportService {
     // HELPERS
     // =========================================================================
 
-    /**
-     * Tìm dòng bắt đầu dữ liệu (dòng ngay sau header "STT").
-     * File Viettel có nhiều dòng tiêu đề trước khi vào header cột thực sự.
-     * Phương thức quét từ trên xuống để tìm dòng có ô đầu tiên = "STT".
-     *
-     * @return index của dòng DATA đầu tiên (sau header), hoặc -1 nếu không tìm thấy
-     */
-    private int findDataStartRow(Sheet sheet, int lastRow) {
-        for (int i = 0; i <= Math.min(lastRow, 20); i++) { // Quét tối đa 20 dòng đầu
-            Row row = sheet.getRow(i);
-            if (row == null) continue;
-            String firstCell = getCellString(row, 0).trim().toUpperCase();
-            if (firstCell.equals("STT")) {
-                return i + 1; // Dòng tiếp theo là dữ liệu
-            }
-        }
-        return -1;
-    }
-
-    /** Kiểm tra dòng có rỗng hoàn toàn không */
     private boolean isRowEmpty(Row row) {
-        for (int c = row.getFirstCellNum(); c < row.getLastCellNum(); c++) {
+        for (int c = 0; c < 15; c++) { 
             Cell cell = row.getCell(c);
-            if (cell != null && cell.getCellType() != CellType.BLANK
-                    && !getCellString(row, c).isBlank()) {
-                return false;
+            if (cell != null && cell.getCellType() != CellType.BLANK) {
+                String val = cell.getStringCellValue();
+                if (val != null && !val.trim().isEmpty()) {
+                    return false;
+                }
             }
         }
         return true;
@@ -446,7 +409,6 @@ public class ImportService {
         return switch (cell.getCellType()) {
             case STRING  -> cell.getStringCellValue().trim();
             case NUMERIC -> {
-                // Tránh số thực không cần thiết: 220000.0 → "220000"
                 double v = cell.getNumericCellValue();
                 yield v == Math.floor(v) ? String.valueOf((long) v) : String.valueOf(v);
             }
